##****************************************************************************
## $Id$
##****************************************************************************
## Process this file with automake to produce Makefile.in.
##****************************************************************************

EXTRA_DIST = \
    ax_pthread.m4 \
    slurm.m4 \
    test-driver \
    type_socklen_t.m4 \
    x_ac__system_configuration.m4 \
    x_ac_affinity.m4 \
    x_ac_aix.m4 \
    x_ac_blcr.m4 \
    x_ac_bluegene.m4 \
    x_ac_cflags.m4 \
    x_ac_cray.m4 \
    x_ac_databases.m4 \
    x_ac_debug.m4 \
    x_ac_dlfcn.m4 \
    x_ac_elan.m4 \
    x_ac_env.m4 \
    x_ac_federation.m4 \
    x_ac_gpl_licensed.m4 \
    x_ac_hwloc.m4 \
    x_ac_iso.m4 \
    x_ac_lua.m4 \
    x_ac_man2html.m4 \
    x_ac_munge.m4 \
    x_ac_ncurses.m4 \
    x_ac_nrt.m4 \
    x_ac_pam.m4 \
    x_ac_printf_null.m4 \
    x_ac_ptrace.m4 \
    x_ac_readline.m4 \
    x_ac_setproctitle.m4 \
    x_ac_sgi_job.m4 \
    x_ac_slurm_ssl.m4 \
    x_ac_sun_const.m4 \
    x_ac_xcpu.m4
