##****************************************************************************
## Process this file with automake to produce Makefile.in.
##****************************************************************************

EXTRA_DIST = \
    ax_check_zlib.m4 \
    ax_gcc_builtin.m4 \
    ax_lib_hdf5.m4 \
    ax_pthread.m4 \
    slurm.m4 \
    test-driver \
    x_ac__system_configuration.m4 \
    x_ac_affinity.m4 \
    x_ac_bluegene.m4 \
    x_ac_c99.m4 \
    x_ac_cgroup.m4 \
    x_ac_cray.m4 \
    x_ac_curl.m4 \
    x_ac_databases.m4 \
    x_ac_debug.m4 \
    x_ac_dlfcn.m4 \
    x_ac_env.m4 \
    x_ac_gpl_licensed.m4 \
    x_ac_hwloc.m4 \
    x_ac_iso.m4 \
    x_ac_json.m4 \
    x_ac_lua.m4 \
    x_ac_man2html.m4 \
    x_ac_munge.m4 \
    x_ac_ncurses.m4 \
    x_ac_netloc.m4 \
    x_ac_nvml.m4 \
    x_ac_pam.m4 \
    x_ac_printf_null.m4 \
    x_ac_ptrace.m4 \
    x_ac_readline.m4 \
    x_ac_setproctitle.m4 \
    x_ac_slurm_ssl.m4 \
    x_ac_systemd.m4 \
    x_ac_uid_gid_size.m4
