# $Id$

SUBDIRS = man 

htmldir = ${prefix}/share/doc/@PACKAGE@-@VERSION@/html

html_DATA = \
	html/arch.png \
	html/entities.png \
	html/quickstart.html

EXTRA_DIST = \
	html/programmer.guide.html \
	html/plugins.html \
	html/authplugins.html \
	html/slurm.png \
	pubdesign/Makefile \
	pubdesign/report.tex \
	pubdesign/sample.config \
	figures \
	common \
	$(html_DATA)
