# $Id$

SUBDIRS = man 

htmldir = ${prefix}/share/doc/@PACKAGE@-@VERSION@/html

html_DATA = \
	html/arch.png \
	html/authplugins.html \
	html/CW.2003.pdf \
	html/documentation.html \
	html/download.html \
	html/entities.png \
	html/faq.html \
	html/help.html \
	html/index.html \
	html/news.html \
	html/overview.html \
	html/platforms.html \
	html/plugins.html \
	html/programmer.guide.html \
	html/publications.html \
	html/quickstart.admin.html \
	html/quickstart.html \
	html/slurm_design.pdf \
	html/team.html

EXTRA_DIST = \
	pubdesign/Makefile \
	pubdesign/report.tex \
	pubdesign/sample.config \
	figures \
	common \
	$(html_DATA)
