# $Id$

SUBDIRS = man 

htmldir = ${prefix}/share/doc/@PACKAGE@-@VERSION@/html

html_DATA = \
	html/arch.gif \
	html/authplugins.html \
	html/coding_style.pdf \
	html/documentation.html \
	html/download.html \
	html/entities.gif \
	html/faq.html \
	html/help.html \
	html/lll.gif \
	html/news.html \
	html/overview.html \
	html/platforms.html \
	html/plugins.html \
	html/programmer_guide.html \
	html/publications.html \
	html/quickstart_admin.html \
	html/quickstart.html \
	html/slurm_banner.jpg \
	html/slurm_design.pdf \
	html/slurm.html \
	html/slurmstyles.css \
	html/spacer.gif \
	html/team.html

EXTRA_DIST = \
	pubdesign/Makefile \
	pubdesign/report.tex \
	pubdesign/sample.config \
	figures \
	common \
	$(html_DATA)
