SUBDIRS =		\
	api		\
	bcast		\
	common		\
	database	\
	interfaces	\
	lua		\
	plugins		\
	sacct		\
	sacctmgr	\
	salloc		\
	sattach		\
	sbatch		\
	sbcast		\
	scancel		\
	scontrol	\
	scrontab	\
	scrun		\
	sdiag		\
	sinfo		\
	slurmctld	\
	slurmd		\
	slurmdbd	\
	slurmrestd	\
	sprio		\
	squeue		\
	sreport		\
	srun		\
	sshare		\
	sstat		\
	strigger	\
	sview
