SUBDIRS =		\
	api		\
	bcast		\
	common		\
	database	\
	interfaces	\
	lua		\
	plugins		\
	sacct		\
	sacctmgr	\
	sackd		\
	salloc		\
	sattach		\
	sbatch		\
	sbcast		\
	scancel		\
	scontrol	\
	scrontab	\
	sdiag		\
	sinfo		\
	slurmctld	\
	slurmd		\
	slurmdbd	\
	slurmrestd	\
	sprio		\
	squeue		\
	sreport		\
	srun		\
	sshare		\
	sstat		\
	strigger	\
	sview

if LINUX_BUILD
SUBDIRS += scrun
endif
