SUBDIRS =		\
	api		\
	bcast		\
	common		\
	conmgr		\
	curl		\
	database	\
	interfaces	\
	plugins		\
	sacct		\
	sacctmgr	\
	sackd		\
	salloc		\
	sattach		\
	sbatch		\
	sbcast		\
	scancel		\
	scontrol	\
	scrontab	\
	sdiag		\
	sinfo		\
	slurmctld	\
	slurmd		\
	slurmdbd	\
	slurmrestd	\
	sprio		\
	squeue		\
	sreport		\
	srun		\
	sshare		\
	sstat		\
	stepmgr 	\
	strigger	\
	sview

if HAVE_LUA
SUBDIRS += lua

if LINUX_BUILD
SUBDIRS += scrun
endif

endif
